new JLbackup.ini: added sections

--- a/JLbackup.ini
+++ b/JLbackup.ini
@@ -18,3 +18,15 @@ EL6=\856_1_
 EL7=\922_1_
 EL8=\999_1_
 EL9=\998_1_
+[ShortcutsL]
+JOB=C:\APPS\EVO\JOB
+TPL=C:\APPS\EVO\TPL
+ASC=C:\APPS\EVO\ASC
+TPLASC=C:\APPS\EVO\TPLASC
+Archief=C:\APPS\EVO\Archief
+[ShortcutsR]
+EVOware=C:\ProgramFiles (x86)\Tecan\Evoware
+AppData=C:\Users\Administrator\AppData
+ProgramData=C:\ProgramData\Tecan\Evoware
+Documents=C:\Users\Administrator\Documents
+PC=C:\
